Final review change for E.Stanilovskiy.